trying to generate the problem

--- a/set-covering/a-start.ipynb
+++ b/set-covering/a-start.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,10 +62,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'xSets' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Utente\\Desktop\\Magistrale\\CI2324\\PROJECTS\\LABS\\s317264-computational-intelligence-labs\\set-covering\\a-start.ipynb Cell 7\u001b[0m line \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Utente/Desktop/Magistrale/CI2324/PROJECTS/LABS/s317264-computational-intelligence-labs/set-covering/a-start.ipynb#W0sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m     xSets\u001b[39m=\u001b[39m \u001b[39mset\u001b[39m()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Utente/Desktop/Magistrale/CI2324/PROJECTS/LABS/s317264-computational-intelligence-labs/set-covering/a-start.ipynb#W0sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m xSets\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Utente/Desktop/Magistrale/CI2324/PROJECTS/LABS/s317264-computational-intelligence-labs/set-covering/a-start.ipynb#W0sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m astar(N, xSets)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'xSets' is not defined"
+     ]
+    }
+   ],
    "source": [
+    "N = 10 #to generates the goal from 0 to 9, integers\n",
+    "\n",
     "def astar(N, all_lists):\n",
     "    goal = set(range(N))\n",
     "    initial_state = {\n",
@@ -74,9 +88,10 @@
     "        'remaining_sets': all_lists[:]\n",
     "    }\n",
     "\n",
-    "def generate():\n",
-    "    #todo\n",
-    "    return None"
+    "def generate_sets(N):\n",
+    "    xSets= set()\n",
+    "    return xSets\n",
+    "\n"
    ]
   },
   {
@@ -88,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
