--- a/set-covering/a-start.ipynb
+++ b/set-covering/a-start.ipynb
@@ -44,11 +44,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import heapq"
+    "import heapq\n",
+    "import random\n",
+    "import logging"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "`Problem Generation`: Generated a Goal States and the list of sets X."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def problem(N, seed=None):\n",
+    "    \"\"\"Creates an instance of the problem\"\"\"\n",
+    "    state = random.getstate()\n",
+    "    random.seed(seed)\n",
+    "    p = [\n",
+    "        list(set(random.randint(0, N - 1) for n in range(random.randint(N // 5, N // 2))))\n",
+    "        for n in range(random.randint(N, N * 5))\n",
+    "        ]\n",
+    "    random.setstate(state)\n",
+    "    return p\n"
    ]
   },
   {
@@ -56,30 +84,15 @@
    "metadata": {},
    "source": [
     "`State Representation`: Define a state representation that keeps track of the current solution, the remaining uncovered elements, and the list of sets that can be considered for covering. I used a dictionary.\n",
-    "\n",
-    "`Problem Generation`: Generated a Goal States and the list of sets X."
+    "`Heuristic`: takes a state as an argument. This function calculates the heuristic value, which is an estimate of how far the current state is from the goal state. In this example, the heuristic function calculates the number of uncovered elements by subtracting the covered elements from the goal."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'xSets' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Utente\\Desktop\\Magistrale\\CI2324\\PROJECTS\\LABS\\s317264-computational-intelligence-labs\\set-covering\\a-start.ipynb Cell 7\u001b[0m line \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Utente/Desktop/Magistrale/CI2324/PROJECTS/LABS/s317264-computational-intelligence-labs/set-covering/a-start.ipynb#W0sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m     xSets\u001b[39m=\u001b[39m \u001b[39mset\u001b[39m()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Utente/Desktop/Magistrale/CI2324/PROJECTS/LABS/s317264-computational-intelligence-labs/set-covering/a-start.ipynb#W0sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m xSets\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Utente/Desktop/Magistrale/CI2324/PROJECTS/LABS/s317264-computational-intelligence-labs/set-covering/a-start.ipynb#W0sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m astar(N, xSets)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'xSets' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "N = 10 #to generates the goal from 0 to 9, integers\n",
-    "\n",
     "def astar(N, all_lists):\n",
     "    goal = set(range(N))\n",
     "    initial_state = {\n",
@@ -88,28 +101,106 @@
     "        'remaining_sets': all_lists[:]\n",
     "    }\n",
     "\n",
-    "def generate_sets(N):\n",
-    "    xSets= set()\n",
-    "    return xSets\n",
-    "\n"
+    "    def heuristic(state):\n",
+    "        return len(goal - state['covered'])\n",
+    "\n",
+    "    open_set = [(heuristic(initial_state), initial_state)]\n",
+    "    closed_set = set()\n",
+    "\n",
+    "    while open_set:\n",
+    "        _, current_state = heapq.heappop(open_set)\n",
+    "\n",
+    "        if current_state['covered'] == goal:\n",
+    "            return current_state['solution']\n",
+    "\n",
+    "        closed_set.add(tuple(current_state['solution']))\n",
+    "\n",
+    "        for next_set in current_state['remaining_sets']:\n",
+    "            new_solution = current_state['solution'] + [next_set]\n",
+    "            new_covered = current_state['covered'] | set(next_set)\n",
+    "            new_state = {\n",
+    "                'solution': new_solution,\n",
+    "                'covered': new_covered,\n",
+    "                'remaining_sets': current_state['remaining_sets'][1:]\n",
+    "            }\n",
+    "\n",
+    "            if tuple(new_solution) not in closed_set:\n",
+    "                f_value = len(new_solution) + heuristic(new_state)\n",
+    "                heapq.heappush(open_set, (f_value, new_state))\n",
+    "\n",
+    "    return None  # No solution found\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`Heuristic`: takes a state as an argument. This function calculates the heuristic value, which is an estimate of how far the current state is from the goal state. In this example, the heuristic function calculates the number of uncovered elements by subtracting the covered elements from the goal."
+    "## Usage"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated Problem Instance:\n",
+      "Set 1: [4, 5, 6, 7]\n",
+      "Set 2: [8, 2, 5, 6]\n",
+      "Set 3: [8, 1, 6]\n",
+      "Set 4: [0, 3, 4, 5]\n",
+      "Set 5: [0, 9, 2, 3]\n",
+      "Set 6: [1, 3, 4, 9]\n",
+      "Set 7: [0, 1, 2, 5, 7]\n",
+      "Set 8: [0, 4, 5, 8, 9]\n",
+      "Set 9: [4, 7]\n",
+      "Set 10: [8, 3, 6, 7]\n",
+      "Set 11: [3, 4, 5, 6]\n",
+      "Set 12: [0]\n",
+      "Set 13: [0, 2, 5, 6, 9]\n",
+      "Set 14: [2, 3, 4, 6, 7]\n",
+      "Set 15: [9, 3, 5, 7]\n",
+      "Set 16: [0, 1, 2, 3, 4]\n",
+      "Set 17: [0, 6, 7]\n",
+      "Set 18: [8, 3]\n",
+      "Set 19: [3, 6]\n",
+      "Set 20: [8, 5]\n",
+      "Set 21: [1, 2, 4, 8, 9]\n",
+      "Set 22: [2, 4, 7]\n",
+      "Set 23: [2, 6]\n",
+      "Set 24: [1]\n",
+      "Set 25: [0, 2, 4, 5, 8]\n",
+      "Set 26: [5, 6]\n",
+      "Set 27: [0, 9, 2, 8]\n",
+      "Set 28: [1, 6]\n",
+      "Set 29: [2, 3, 4, 7]\n",
+      "Set 30: [0, 2, 5, 6, 8]\n",
+      "Set 31: [1, 9, 6]\n",
+      "Set 32: [8, 4, 6]\n",
+      "Set 33: [0, 3, 6]\n",
+      "Set 34: [2, 5]\n",
+      "Set 35: [8, 2, 3]\n",
+      "Set 36: [8, 4, 7]\n",
+      "Set 37: [1, 7]\n",
+      "Set 38: [8, 1, 4, 6]\n",
+      "Set 39: [1, 3, 9]\n",
+      "Set 40: [8, 1, 2, 7]\n",
+      "Set 41: [9, 2, 4]\n",
+      "Set 42: [0, 3, 4, 5]\n",
+      "Set 43: [0, 9, 4]\n",
+      "Set 44: [0, 3, 4, 5]\n"
+     ]
+    }
+   ],
    "source": [
-    "def heuristic(state):\n",
-    " #todo\n",
-    " return len(goal - state['covered'])"
+    "N = 10  #  N as needed\n",
+    "problem_instance = problem(N)\n",
+    "print(\"Generated Problem Instance:\")\n",
+    "for i, sub_list in enumerate(problem_instance):\n",
+    "    print(f\"Set {i + 1}: {sub_list}\")"
    ]
   }
  ],
