--- a/set-covering/a-start.ipynb
+++ b/set-covering/a-start.ipynb
@@ -39,18 +39,19 @@
    "metadata": {},
    "source": [
     "`Imports of libraries`:\n",
-    "- heapq is priority queue, it seems logical to use something like this based on the nature of A*"
+    "- heapq is priority queue, it seems logical to use something like this based on the nature of A*\n",
+    "- random it's used to generate the sets, it's possible to fix the seed to make the problem reproducible aka pseudorandom"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "import heapq\n",
     "import random\n",
-    "import logging"
+    "#import logging"
    ]
   },
   {
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -148,50 +149,23 @@
      "output_type": "stream",
      "text": [
       "Generated Problem Instance:\n",
-      "Set 1: [4, 5, 6, 7]\n",
-      "Set 2: [8, 2, 5, 6]\n",
-      "Set 3: [8, 1, 6]\n",
-      "Set 4: [0, 3, 4, 5]\n",
-      "Set 5: [0, 9, 2, 3]\n",
-      "Set 6: [1, 3, 4, 9]\n",
-      "Set 7: [0, 1, 2, 5, 7]\n",
-      "Set 8: [0, 4, 5, 8, 9]\n",
-      "Set 9: [4, 7]\n",
-      "Set 10: [8, 3, 6, 7]\n",
-      "Set 11: [3, 4, 5, 6]\n",
-      "Set 12: [0]\n",
-      "Set 13: [0, 2, 5, 6, 9]\n",
-      "Set 14: [2, 3, 4, 6, 7]\n",
-      "Set 15: [9, 3, 5, 7]\n",
-      "Set 16: [0, 1, 2, 3, 4]\n",
-      "Set 17: [0, 6, 7]\n",
-      "Set 18: [8, 3]\n",
-      "Set 19: [3, 6]\n",
-      "Set 20: [8, 5]\n",
-      "Set 21: [1, 2, 4, 8, 9]\n",
-      "Set 22: [2, 4, 7]\n",
-      "Set 23: [2, 6]\n",
-      "Set 24: [1]\n",
-      "Set 25: [0, 2, 4, 5, 8]\n",
-      "Set 26: [5, 6]\n",
-      "Set 27: [0, 9, 2, 8]\n",
-      "Set 28: [1, 6]\n",
-      "Set 29: [2, 3, 4, 7]\n",
-      "Set 30: [0, 2, 5, 6, 8]\n",
-      "Set 31: [1, 9, 6]\n",
-      "Set 32: [8, 4, 6]\n",
-      "Set 33: [0, 3, 6]\n",
-      "Set 34: [2, 5]\n",
-      "Set 35: [8, 2, 3]\n",
-      "Set 36: [8, 4, 7]\n",
-      "Set 37: [1, 7]\n",
-      "Set 38: [8, 1, 4, 6]\n",
-      "Set 39: [1, 3, 9]\n",
-      "Set 40: [8, 1, 2, 7]\n",
-      "Set 41: [9, 2, 4]\n",
-      "Set 42: [0, 3, 4, 5]\n",
-      "Set 43: [0, 9, 4]\n",
-      "Set 44: [0, 3, 4, 5]\n"
+      "Set 1: [8, 9, 3, 5]\n",
+      "Set 2: [3, 4, 6]\n",
+      "Set 3: [0, 3]\n",
+      "Set 4: [0, 1]\n",
+      "Set 5: [1, 2, 4, 5, 6]\n",
+      "Set 6: [8, 4, 5]\n",
+      "Set 7: [0, 3, 4]\n",
+      "Set 8: [8, 2, 3]\n",
+      "Set 9: [8, 1]\n",
+      "Set 10: [0, 2, 4, 7, 9]\n",
+      "Set 11: [1, 4]\n",
+      "Set 12: [9, 2, 3, 6]\n",
+      "Set 13: [0, 3]\n",
+      "Set 14: [2, 3, 4, 7]\n",
+      "Set 15: [0, 7]\n",
+      "Set 16: [0, 9, 7]\n",
+      "Set 17: [8, 1, 5, 6]\n"
      ]
     }
    ],
