--- a/set-covering/a-star.ipynb
+++ b/set-covering/a-star.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,72 +64,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def problem(N, seed=None):\n",
-    "    \"\"\"Creates an instance of the problem\"\"\"\n",
-    "    state = random.getstate()\n",
-    "    random.seed(seed)\n",
+    "def problem(N, fixed_seed=42):\n",
+    "    \"\"\"Creates an instance of the problem with a fixed seed\"\"\"\n",
+    "    random.seed(fixed_seed)\n",
+    "    \n",
     "    p = [\n",
     "        list(set(random.randint(0, N - 1) for n in range(random.randint(N // 5, N // 2))))\n",
-    "        for n in range(random.randint(N, N * 5))\n",
-    "        ]\n",
-    "    random.setstate(state)\n",
-    "    return p\n"
+    "        for _ in range(random.randint(N, N * 5))\n",
+    "    ]\n",
+    "    \n",
+    "    return p"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`State Representation`: Define a state representation that keeps track of the current solution, the remaining uncovered elements, and the list of sets that can be considered for covering. I used a dictionary.\n",
+    "`State Representation`: Define a state representation that keeps track of the current solution, the remaining uncovered elements, and the list of sets that can be considered for covering.\n",
+    "At the beginning I used a dictionary, bad idea since it does not go well with priority queues, at the end I'm just considering sets as strings with integers separated by semicolons\n",
+    "\n",
     "`Heuristic`: takes a state as an argument. This function calculates the heuristic value, which is an estimate of how far the current state is from the goal state. In this example, the heuristic function calculates the number of uncovered elements by subtracting the covered elements from the goal."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def astar(N, all_lists):\n",
     "    goal = set(range(N))\n",
-    "    initial_state = {\n",
-    "        'solution': [],\n",
-    "        'covered': set(),\n",
-    "        'remaining_sets': all_lists[:]\n",
-    "    }\n",
+    "    initial_state = ([], set(), all_lists[:])\n",
     "\n",
     "    def heuristic(state):\n",
-    "        return len(goal - state['covered'])\n",
+    "        return len(goal - state[1])\n",
     "\n",
-    "    open_set = [(heuristic(initial_state), initial_state)]\n",
-    "    closed_set = set()\n",
+    "    open_set = [(heuristic(initial_state), 0, initial_state)]\n",
+    "    explored_states = set()\n",
     "\n",
     "    while open_set:\n",
-    "        _, current_state = heapq.heappop(open_set)\n",
+    "        _, step, current_state = heapq.heappop(open_set)\n",
     "\n",
-    "        if current_state['covered'] == goal:\n",
-    "            return current_state['solution']\n",
+    "        if current_state[1] == goal:\n",
+    "            return current_state[0]\n",
     "\n",
-    "        closed_set.add(tuple(current_state['solution']))\n",
+    "        state_str = \",\".join(map(str, current_state[0])) + \";\" + \",\".join(map(str, current_state[1]))\n",
+    "        explored_states.add(state_str)\n",
     "\n",
-    "        for next_set in current_state['remaining_sets']:\n",
-    "            new_solution = current_state['solution'] + [next_set]\n",
-    "            new_covered = current_state['covered'] | set(next_set)\n",
-    "            new_state = {\n",
-    "                'solution': new_solution,\n",
-    "                'covered': new_covered,\n",
-    "                'remaining_sets': current_state['remaining_sets'][1:]\n",
-    "            }\n",
+    "        for i, next_set in enumerate(current_state[2]):\n",
+    "            new_solution = current_state[0] + [next_set]\n",
+    "            new_covered = current_state[1] | set(next_set)\n",
+    "            new_remaining = current_state[2][i+1:]\n",
+    "            new_state = (new_solution, new_covered, new_remaining)\n",
     "\n",
-    "            if tuple(new_solution) not in closed_set:\n",
+    "            # Check if the new state has been explored\n",
+    "            state_str = \",\".join(map(str, new_solution)) + \";\" + \",\".join(map(str, new_covered))\n",
+    "            if state_str not in explored_states:\n",
     "                f_value = len(new_solution) + heuristic(new_state)\n",
-    "                heapq.heappush(open_set, (f_value, new_state))\n",
+    "                heapq.heappush(open_set, (f_value, step + 1, new_state))\n",
     "\n",
-    "    return None  # No solution found\n"
+    "    return None  # No solution found"
    ]
   },
   {
@@ -141,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -149,23 +147,60 @@
      "output_type": "stream",
      "text": [
       "Generated Problem Instance:\n",
-      "Set 1: [8, 9, 3, 5]\n",
-      "Set 2: [3, 4, 6]\n",
-      "Set 3: [0, 3]\n",
+      "Set 1: [0, 4]\n",
+      "Set 2: [1, 2, 3]\n",
+      "Set 3: [9, 6]\n",
       "Set 4: [0, 1]\n",
-      "Set 5: [1, 2, 4, 5, 6]\n",
-      "Set 6: [8, 4, 5]\n",
-      "Set 7: [0, 3, 4]\n",
-      "Set 8: [8, 2, 3]\n",
-      "Set 9: [8, 1]\n",
-      "Set 10: [0, 2, 4, 7, 9]\n",
-      "Set 11: [1, 4]\n",
-      "Set 12: [9, 2, 3, 6]\n",
-      "Set 13: [0, 3]\n",
-      "Set 14: [2, 3, 4, 7]\n",
-      "Set 15: [0, 7]\n",
-      "Set 16: [0, 9, 7]\n",
-      "Set 17: [8, 1, 5, 6]\n"
+      "Set 5: [8, 9, 3]\n",
+      "Set 6: [8, 3]\n",
+      "Set 7: [0, 3, 4, 7, 9]\n",
+      "Set 8: [4, 5, 6]\n",
+      "Set 9: [1, 3, 5]\n",
+      "Set 10: [1, 6]\n",
+      "Set 11: [0, 9, 4, 5]\n",
+      "Set 12: [8, 1, 6]\n",
+      "Set 13: [9, 3, 5]\n",
+      "Set 14: [0, 3]\n",
+      "Set 15: [1, 3, 6]\n",
+      "Set 16: [2, 5, 7]\n",
+      "Set 17: [1, 3, 4, 9]\n",
+      "Set 18: [8, 2, 3]\n",
+      "Set 19: [3, 4, 5, 6, 8]\n",
+      "Set 20: [0, 3]\n",
+      "Set 21: [1, 3, 4, 6]\n",
+      "Set 22: [3, 6, 7]\n",
+      "Set 23: [2, 3, 4]\n",
+      "Set 24: [9, 6]\n",
+      "Set 25: [8, 2, 3, 7]\n",
+      "Set 26: [0, 1]\n",
+      "Set 27: [9, 2, 6]\n",
+      "Set 28: [6]\n",
+      "Set 29: [8, 0, 4, 1]\n",
+      "Set 30: [1, 4, 5, 6]\n",
+      "Set 31: [0, 4, 7]\n",
+      "Set 32: [8, 1, 4]\n",
+      "Set 33: [2, 5]\n",
+      "Set 34: [9, 5]\n",
+      "Set 35: [0, 1, 3, 4, 5]\n",
+      "Set 36: [9, 3]\n",
+      "Set 37: [1, 7]\n",
+      "Set 38: [8, 2]\n",
+      "Set 39: [8, 2, 7]\n",
+      "Set 40: [8, 9, 3, 6]\n",
+      "Set 41: [4, 5, 6]\n",
+      "Set 42: [8, 1, 3, 7]\n",
+      "Set 43: [0, 5]\n",
+      "Set 44: [0, 9, 3]\n",
+      "Set 45: [0, 3]\n",
+      "Set 46: [0, 5]\n",
+      "Set 47: [8, 3]\n",
+      "Set 48: [8, 2, 3, 7]\n",
+      "Set 49: [1, 3, 6, 7]\n",
+      "Set 50: [5, 6]\n",
+      "A* Solution:\n",
+      "Selected Set 1: [0, 1, 3, 4, 5]\n",
+      "Selected Set 2: [8, 2, 7]\n",
+      "Selected Set 3: [8, 9, 3, 6]\n"
      ]
     }
    ],
@@ -174,7 +209,16 @@
     "problem_instance = problem(N)\n",
     "print(\"Generated Problem Instance:\")\n",
     "for i, sub_list in enumerate(problem_instance):\n",
-    "    print(f\"Set {i + 1}: {sub_list}\")"
+    "    print(f\"Set {i + 1}: {sub_list}\")\n",
+    "\n",
+    "solution = astar(N, problem_instance)\n",
+    "\n",
+    "if solution:\n",
+    "    print(\"A* Solution:\")\n",
+    "    for i, selected_set in enumerate(solution):\n",
+    "        print(f\"Selected Set {i + 1}: {selected_set}\")\n",
+    "else:\n",
+    "    print(\"No solution found.\")"
    ]
   }
  ],
