--- a/set-covering/a-star.ipynb
+++ b/set-covering/a-star.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -198,9 +198,9 @@
       "Set 49: [1, 3, 6, 7]\n",
       "Set 50: [5, 6]\n",
       "A* Solution:\n",
-      "Selected Set 1: [0, 1, 3, 4, 5]\n",
-      "Selected Set 2: [8, 2, 7]\n",
-      "Selected Set 3: [8, 9, 3, 6]\n"
+      "Selected Set 35: [0, 1, 3, 4, 5]\n",
+      "Selected Set 39: [8, 2, 7]\n",
+      "Selected Set 40: [8, 9, 3, 6]\n"
      ]
     }
    ],
@@ -216,7 +216,8 @@
     "if solution:\n",
     "    print(\"A* Solution:\")\n",
     "    for i, selected_set in enumerate(solution):\n",
-    "        print(f\"Selected Set {i + 1}: {selected_set}\")\n",
+    "        set_number = problem_instance.index(selected_set) + 1  # Find the index of the selected set\n",
+    "        print(f\"Selected Set {set_number}: {selected_set}\")\n",
     "else:\n",
     "    print(\"No solution found.\")"
    ]
