added some documentation in the notebook

--- a/lab1/a-star.ipynb
+++ b/lab1/a-star.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,12 +87,19 @@
     "`State Representation`: Define a state representation that keeps track of the current solution, the remaining uncovered elements, and the list of sets that can be considered for covering.\n",
     "At the beginning I used a dictionary, bad idea since it does not go well with priority queues, at the end I'm just considering sets as strings with integers separated by semicolons\n",
     "\n",
-    "`Heuristic`: takes a state as an argument. This function calculates the heuristic value, which is an estimate of how far the current state is from the goal state. In this example, the heuristic function calculates the number of uncovered elements by subtracting the covered elements from the goal."
+    "`Heuristic`: takes a state as an argument. This function calculates the heuristic value, which is an estimate of how far the current state is from the goal state. In this example, the heuristic function calculates the number of uncovered elements by subtracting the covered elements from the goal.\n",
+    "- **len(new_solution)**: This component represents the actual cost (g(n)) in this context. It is the length of the list of selected sets. This represents the number of sets that have been chosen so far to cover the required elements.\n",
+    "\n",
+    "- **heuristic(new_state)**: This component is the heuristic value (h(n)) estimated by the heuristic function. It represents the estimated remaining cost to reach the goal state from the new state new_state. In this particular problem, the heuristic function calculates the number of uncovered elements (elements not yet covered) by subtracting the covered elements from the goal set. This estimation represents how many more elements need to be covered\n",
+    "\n",
+    "`Main Loop`: aka astar runs until the goal state is reached or there are no more states to explore.\n",
+    "\n",
+    "`State Evaluation`: For each new state, the algorithm checks if it has been explored before and calculates the f(n) value:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
